[Bugfix] Avoid inside column breaks for list items on Safari

--- a/public/framework/scss/_components/_list.scss
+++ b/public/framework/scss/_components/_list.scss
@@ -16,6 +16,13 @@ li {
       }
     }
   }
+
+  // Avoid column breaks for MacOS and Safari
+  .c_list & {
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
+  }
 }
 
 .color-li {
